  * ignore the is_distro_package() check if it is set to true.
  * bin/apport-retrace: Call Cache.open() after Cache.update().
  * bin/apport-retrace: If downloading a report fails (e. g. the
    description was invalidly modified), mark the bug as invalid with
    a proper explanation instead of crashing, unless we are in
    "stdout" or "output file" mode.

 -- Martin Pitt <martin.pitt@ubuntu.com>  Mon, 19 Jan 2009 17:37:51 +0100

apport (0.127) jaunty; urgency=low

  * bin/apportcheckresume, debian/apport.init: integrate with pm-utils to
    detect suspend/resume failures.  Thanks to Steve Conklin and Andy
    Whitcroft.  LP: #316419.

 -- Steve Langasek <steve.langasek@ubuntu.com>  Tue, 13 Jan 2009 12:54:12 -0800

apport (0.126) jaunty; urgency=low

  * bin/apport-chroot: If --auth is specified in "login" mode, symlink
    the file into /tmp/auth in the fakechroot. This makes it much
    easier to interactively debug retracing.
  * bin/apport-retrace: Exit with zero for bugs which do not have a
    core dump, so that it does not completely stop the retracers.

 -- Martin Pitt <martin.pitt@ubuntu.com>  Fri, 09 Jan 2009 22:49:48 +0100

apport (0.125) jaunty; urgency=low

  * bin/apport-chroot: Exit with apport-retraces' exit status, to
    propagate errors upwards to crash-digger.
  * bin/apport-retrace: Do not put outdated -dbgsym comments into the
    bug comments.
  * Rewrite bin/crash-digger to become much more robust and easier for
    retracer maintainers:
    - Now designed around cron-based maintenance: start, process all
      pending bugs, exit. This makes memory leaks irrelevant, and gets
      rid of all the logging, daemonizing, and looping code.
    - Adapt stdout/stderr reporting to be suitable for cron and
      redirecting stdout to a log file.
    - Use lock files to avoid overlapping instances and avoid damaging
      bugs with broken retracers after crash-digger failed.
    - Handle chroot upgrading, so that this does not need separate