@@ -7,8 +7,11 @@ apport (0.128) UNRELEASED; urgency=low
     description was invalidly modified), mark the bug as invalid with
     a proper explanation instead of crashing, unless we are in
     "stdout" or "output file" mode.
+  * apport/crashdb_impl/launchpad.py: Apply some heuristics to attempt
+    recovering broken descriptions as in LP #315728 (intermediate
+    blank lines, and non-apport data append).
 
- -- Martin Pitt <martin.pitt@ubuntu.com>  Mon, 19 Jan 2009 17:37:51 +0100
+ -- Martin Pitt <martin.pitt@ubuntu.com>  Mon, 19 Jan 2009 17:40:12 +0100
 
 apport (0.127) jaunty; urgency=low
 
